--- a/health_care_assistant_1.0.ipynb
+++ b/health_care_assistant_1.0.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_10480/4279401001.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\fabian\\AppData\\Local\\Temp/ipykernel_10480/4279401001.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    pip install MySQLdb\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install MySQLdb\n",
+    "import pymysql\n",
     "from sqlalchemy import create_engine, select, join, MetaData, Table\n",
     "engine = create_engine('mysql+pymysql://root:123y4halos@localhost/cassatta')\n",
     "\n",
