Connection successful chino

--- a/alfaj_assistant_1.0.ipynb
+++ b/alfaj_assistant_1.0.ipynb
@@ -2,24 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psycopg2\n",
     "from sqlalchemy import create_engine, select, join, MetaData, Table\n",
-    "engine = create_engine('postgresql://admin:ueDrxqVQwtQeBGJ@192.168.88.247/rasa')\n",
+    "#engine = create_engine('postgresql://admin:ueDrxqVQwtQeBGJ@192.168.88.247/rasa')\n",
+    "\n",
+    "engine = create_engine('mysql+pymysql://root:Undec_1234@localhost/cassatta')\n",
     "\n",
     "# \"postgresql://admin:ueDrxqVQwtQeBGJ@192.168.88.247/rasa\"\n",
     "\n",
     "connection = engine.connect()\n",
     "metadata   = MetaData()\n",
     "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "doc = Table('doctors', metadata, autoload=True, autoload_with=engine, schema='hca')\n",
     "msp = Table('medical_specialties', metadata, autoload=True, autoload_with=engine, schema='hca')\n",
     "hre = Table('health_relations', metadata, autoload=True, autoload_with=engine, schema='hca')\n",
-    "heq = Table('headquarters', metadata, autoload=True, autoload_with=engine, schema='hca')\n",
-    "        "
+    "heq = Table('headquarters', metadata, autoload=True, autoload_with=engine, schema='hca')"
    ]
   },
   {
@@ -166,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
