Nueva cadena de conexion oracle

--- a/alfaj_assistant_1.0.ipynb
+++ b/alfaj_assistant_1.0.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sqlalchemy import create_engine, select, join, MetaData, Table\n",
     "#engine = create_engine('postgresql://admin:ueDrxqVQwtQeBGJ@192.168.88.247/rasa')\n",
     "\n",
-    "engine = create_engine('mysql+pymysql://root:123y4halos@localhost/cassatta')\n",
+    "engine = create_engine('oracle://franco:integraloracle@192.168.0.106/cassatta')\n",
     "\n",
     "# \"postgresql://admin:ueDrxqVQwtQeBGJ@192.168.88.247/rasa\"\n",
     "\n",
